P04 full credit Makefile rev 1

--- a/P04/full_credit/Makefile
+++ b/P04/full_credit/Makefile
@@ -2,21 +2,17 @@
 
 CXXFLAGS += --std=c++17
 
-all: test coin
+all: coin
 
 logger: CXXFLAGS += -DLOGGER
-logger: coin test
+logger: coin
 
 rebuild: clean coin
 
-coin: main.o coin.o *.h
-	$(CXX) $(CXXFLAGS) main.o coin.o -o coin
-test: test.o coin.o *.h
-	$(CXX) $(CXXFLAGS) test.o coin.o -o test
+coin: test.o coin.o *.h
+	$(CXX) $(CXXFLAGS) test.o coin.o -o coin
 
-main.o: main.cpp
-	$(CXX) $(CXXFLAGS) -c main.cpp -o main.o
-coin.o: coin.cpp
+coin.o: coin.cpp *.h
 	$(CXX) $(CXXFLAGS) -c coin.cpp -o coin.o
 test.o: test.cpp *.h
 	$(CXX) $(CXXFLAGS) -c test.cpp -o test.o
@@ -25,4 +21,4 @@ coin.gch: coin.h
 	$(CXX) $(CXXFLAGS) -c coin.h -o coin.gch
 
 clean:
-	rm -f *.o *.gch ~* a.out test coin
+	rm -f *.o *.gch ~* a.out coin
